@@ -73,7 +73,16 @@ local extraDescription =
 		value = "money",
 		defaultValue = DEFAULT_NOCOMPETITION_ABSOLUTE,	
 	},
-	extraOrder = { "selfRange", "undercutRange", "undercutRelative", "undercutAbsolute", "noCompetitionRelative", "noCompetitionAbsolute" }
+	Layout =
+	{
+		{ "selfRange" },
+		{ "undercutRange" },
+		{ "undercutRelative" },
+		{ "undercutAbsolute" },
+		{ "noCompetitionRelative" },
+		{ "noCompetitionAbsolute" },
+		columns = 1,
+	},
 }
 
 local function MatchFunction(item, originalBid, originalBuy, adjustedBid, adjustedBuy, auctions, extra)
