@@ -1,3 +1,6 @@
+	r6
+- Added Fixed Price Fallback	
+
 	r5
 - Fixed bug in RelativePosition PriceStat
 - Fixed bug in PercentileTrim PriceSampler	
